<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reptar</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_prehistoric">Welcome to Reptar: The Prehistoric Simulator</string>
    <string name="load_previous_simulation">&quot;Load Previous&quot;</string>
    <string name="new_sim">New Simulation</string>
    <string name="are_you_sure">Are you sure you want to delete the previous simulation?</string>
    <string name="warning">Warning!</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_simulation">Simulation</string>
    <string name="hello_world">Hello world!</string>
    <string name="environment">Environment:</string>
    <string name="growth_rate">Growth Rate:</string>
    <string name="humans">Humans:</string>
    <string name="pterodactyl">pterodactyl</string>
    <string name="t_rex">T-Rex</string>
    <string name="amount_of_animals">Amount of Animals:</string>
<<<<<<< HEAD

=======
    
>>>>>>> defa3c038d06277e7f1839445e1bb4e422219a37
    <string-array name="environments_array">
        <item>Grasslands</item>
        <item>Wetland</item>
        <item>Forest</item>
    </string-array>
<<<<<<< HEAD
    <string-array name="growth_levels">
        <item>slow</item>
        <item>medium</item>
        <item>fast</item>
    </string-array>

    <string name="title_activity_splash_screen">SplashScreen</string>
=======
>>>>>>> defa3c038d06277e7f1839445e1bb4e422219a37

	<string-array name="growth_levels">
        <item>slow</item>
        <item>medium</item>
        <item>fast</item>
    </string-array>
    
	
</resources>
