<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenu"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnNewSimulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:text="@string/new_sim"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnLoadPreviousSim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNewSimulation"
        android:layout_centerHorizontal="true"
        android:text="@string/load_previous_simulation"
        android:textColor="#000000"
        android:width="150dp" />

    <Button
        android:id="@+id/btnHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLoadPreviousSim"
        android:layout_centerHorizontal="true"
        android:text="Highscores"
        android:textColor="#000000"
        android:width="150dp" />

    <TextView
        android:id="@+id/tvWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/welcome_to_prehistoric"
        android:textColor="#E2DFF3"
        android:textSize="28sp" />

</RelativeLayout>